--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,14 +16,20 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+      - name: Install kitchen
+        run: bundle install
+      - name: Run verify
+        run: bundle exec kitchen verify
+      - name: Run destroy
+        run: bundle exec kitchen destroy
 
-      - name: Kitchen Verify
-        uses: lzysh/github-kitchen-terraform-action@v1.0.0
-        with:
-          kitchen-command: "verify"
+      # - name: Kitchen Verify
+      #   uses: lzysh/github-kitchen-terraform-action@v1.0.0
+      #   with:
+      #     kitchen-command: "verify"
 
-      - name: Kitchen Destroy
-        if: always()
-        uses: lzysh/github-kitchen-terraform-action@v1.0.0
-        with:
-          kitchen-command: "destroy"
+      # - name: Kitchen Destroy
+      #   if: always()
+      #   uses: lzysh/github-kitchen-terraform-action@v1.0.0
+      #   with:
+      #     kitchen-command: "destroy"
