--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
       - name: Install bundle
-        run: gem install bundler
+        run: sudo gem install bundler
       - name: Install kitchen
         run: bundle install
       - name: Run verify
