--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,12 @@ jobs:
       - name: Install kitchen
         run: bundle install
       - name: Run verify
-        run: bundle exec kitchen verify
+        run: bundle exec kitchen verify \
+             cat .kitchen/logs/default-local.log
+
       - name: Run destroy
         run: bundle exec kitchen destroy
+        if: always()
 
       # - name: Kitchen Verify
       #   uses: lzysh/github-kitchen-terraform-action@v1.0.0
