--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ jobs:
       - name: Get repository
         uses: actions/checkout@v2
 
-      - name: Install Terraform
-        uses: hashicorp/setup-terraform@v1
+      # - name: Install Terraform
+      #   uses: hashicorp/setup-terraform@v1
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@master
