--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,13 @@
 name: GitHub Actions Demo
 on: [push]
 jobs:
-  Run-Kitchen:
+  Test-Module:
     runs-on: ubuntu-latest
+
     steps:
+
       - name: Get repository
         uses: actions/checkout@v2
-
-      # - name: Install Terraform
-      #   uses: hashicorp/setup-terraform@v1
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@master
@@ -16,16 +15,20 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+
       - name: Install bundle
         run: sudo gem install bundler
+
       - name: Install kitchen
         run: bundle install
+
       - name: Run converge
         run: bundle exec kitchen converge
+
       - name: Run verify
         run: bundle exec kitchen verify
 
-      - name: Logs
+      - name: Kitchen logs for debug
         run: cat .kitchen/logs/default-local.log
         if: always()
 
@@ -33,13 +36,6 @@ jobs:
         run: bundle exec kitchen destroy
         if: always()
 
-      # - name: Kitchen Verify
-      #   uses: lzysh/github-kitchen-terraform-action@v1.0.0
-      #   with:
-      #     kitchen-command: "verify"
-
-      # - name: Kitchen Destroy
-      #   if: always()
-      #   uses: lzysh/github-kitchen-terraform-action@v1.0.0
-      #   with:
-      #     kitchen-command: "destroy"
+      - name: It worked?
+        if: ${{ success() }}
+        run: echo "🎉🎉🎉🎉🎉🎉🎉🎉🎉🎉🎉🎉🎉🎉🎉🎉🎉🎉"
